refactor: 하드코딩 상수화